<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#EBEBEB"
    app:cardCornerRadius="6dp"
    android:layout_margin="5dp"
    app:cardElevation="4dp"
    app:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_shoot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            android:text="@string/item_shoot_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_shoot_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/tv_shoot_title"
            android:text="@string/item_shoot_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_shoot_distance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_shoot_title"
            android:layout_marginEnd="10dp"
            android:text="@string/item_shoot_distance_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_shoot_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_shoot_title"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@id/tv_shoot_distance_title"
            android:text="@string/item_shoot_distance"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_shoot_distance_meter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_shoot_title"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/tv_shoot_distance"
            android:text="@string/item_shoot_meters"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tv_shoot_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_shoot_distance_title"
            android:text="@string/item_shoot_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>