<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_training"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TrainingsSessionFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/fragment_training_buttons_container"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="90">

        <Button
            android:id="@+id/btn_start_training"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/button_start_training"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_stop_training"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/button_stop_current_training"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_save_shoots"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/button_save_shoot"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>