<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="1dp">

    <TextView
        android:id="@+id/dialog_support_developer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="2dp"
        android:text="@string/alert_dialog_support_dev_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/dialog_support_developer_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/dialog_support_developer_title"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/dialog_support_developer_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_support_developer_divider"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/alert_dialog_support_dev_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/dialog_shot_support_developer_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/dialog_support_developer_message"
        app:singleSelection="true"
        app:checkedButton="@id/dialog_shot_description_button_save">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_support_developer_button_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_support_dev_positive"
            style="@style/SaveShotDialogButtonStylePositive"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_support_developer_button_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_support_dev_negative"
            style="@style/SaveShotDialogButtonStyleNegative"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
</RelativeLayout>